// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots TicketsPage loading tickets 1`] = `
<div
  className="tickets-panel"
>
  <h1>
    Your Tickets
  </h1>
  <div
    className="spinner spinner-md is-auth0"
  >
    <div
      className="circle"
    />
  </div>
</div>
`;

exports[`Storyshots TicketsPage with error loading tickets 1`] = `
<div
  className="tickets-panel"
>
  <h1>
    Your Tickets
  </h1>
  <div
    className="alert alert-danger"
    role="alert"
  >
    <h4>
      Oh snap! You got an error!
    </h4>
    <p>
      There was an error retrieving your tickets
    </p>
  </div>
</div>
`;

exports[`Storyshots TicketsPage with no tickets 1`] = `
<div
  className="tickets-panel"
>
  <h1>
    Your Tickets
  </h1>
  <div
    className="empty-tickets"
  >
    <p>
      There are no tickets.
    </p>
  </div>
</div>
`;

exports[`Storyshots TicketsPage with several tickets 1`] = `
<div
  className="tickets-panel"
>
  <h1>
    Your Tickets
  </h1>
  <table
    className="table table-fixed"
  >
    <thead>
      <tr>
        <th
          width="7%"
        >
          ID
        </th>
        <th>
          Subject
        </th>
        <th
          className="hide-for-mobiles"
          width="15%"
        >
          Requester
        </th>
        <th
          width="19%"
        >
          Status
        </th>
        <th
          className="hide-for-mobiles"
          width="15%"
        >
          Updated
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          #
          1234
        </td>
        <td
          className="text-truncate"
        >
          <a
            href="/tickets/1234"
          >
            Can't make passwordless authentication work
          </a>
        </td>
        <td
          className="text-truncate hide-for-mobiles"
        >
          John Doe
        </td>
        <td>
          <span
            className="label label-primary"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            new
          </span>
        </td>
        <td
          className="hide-for-mobiles"
        >
          7 days ago
        </td>
      </tr>
      <tr>
        <td>
          #
          1244
        </td>
        <td
          className="text-truncate"
        >
          <a
            href="/tickets/1244"
          >
            Urgent Production Outage!!
          </a>
        </td>
        <td
          className="text-truncate hide-for-mobiles"
        >
          John Doe
        </td>
        <td>
          <span
            className="label label-warning"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            pending
          </span>
        </td>
        <td
          className="hide-for-mobiles"
        >
          a month ago
        </td>
      </tr>
      <tr>
        <td>
          #
          1154
        </td>
        <td
          className="text-truncate"
        >
          <a
            href="/tickets/1154"
          >
            Very very very very very very very very very very very very very very very  long text here!
          </a>
        </td>
        <td
          className="text-truncate hide-for-mobiles"
        >
          John Doe
        </td>
        <td>
          <span
            className="label label-default"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            closed
          </span>
        </td>
        <td
          className="hide-for-mobiles"
        >
          a month ago
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the
     
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     
    directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      onClick={[Function]}
      role="button"
      tabIndex="0"
    >
      stories
    </a>
     
    for a component called
     
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at 
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the
     
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     
    to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
